# bot_assistant

./: .gitignore  LICENSE  README.md  bot_assistant.drawio  pyproject.toml
bot_assistant/: address_book_classes.py  bot_logic.py  classes.py  main.py  notes.py  notes_classes.py  sort.py
